--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+<!-- 			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-actuator</artifactId> -->
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
